--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -64,6 +64,18 @@ input
 	text-decoration: none
 	color: #fff
 	outline: none
+.header-search
+	margin-left: 10px
+	border: 1px solid darken(#3b3b3b, 10%)
+	border-radius: 5px
+	padding: 3px 5px
+	color: #fff
+	background: darken(#3b3b3b, 2%)
+	outline: none
+	width: 240px
+	max-width: 240px
+	transition: all .4s
+
 .header-menu-line 
 	display: flex
 	justify-content: space-between
@@ -188,6 +200,10 @@ input
 .nav-img-half-row > img
 	border-top: solid 2px #626262
 /* HEADER DROPDOWN */
+.header-drop-down.header-drop-down-closed
+	max-height: 0
+	transition: max-height 1s
+	overflow: hidden
 .header-drop-down
 	position: absolute
 	top: calc(100% + 2px)
@@ -197,13 +213,19 @@ input
 	width: 100%
 	display: flex
 	flex-wrap: wrap
-	padding: 0 9.6% 33px 9.6%
+	padding: 0 9.6% 0 9.6%
+	max-height: 1000px
+	transition: max-height 1s
 
 	.drop-down-el
 		padding: 33px 20px 0 20px
 		font-size: 18px
 		text-align: center
 		flex-grow: 1
+		&:last-child
+			margin-bottom: 33px
+		&:hover
+			color: $accent
 
 /* HEADER DROPDOWN END */
 /* END FIRST SCREEN */
