--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,6 +1,5 @@
 $accent: #ea5798
-$headings: #000
-$bg: #000
+$blue: #5894ab
 $font: 'Geometria Regular'
 $fontm: 'Geometria Medium'
 $fontl: 'Geometria Light'
